[tool.poetry]
name = "apolo-11"
version = "0.1.0"
description = "Este es un proyecto destinado a practicas y simulacion de archivos y monitor de informes de los archivos generados."
authors = ["Kevin Torres <kevin.tm200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
flake8 = "^7.0.0"
keyboard = "^0.13.5"
mypy = "^1.8.0"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.1.4.231227"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
